# cybulde-project-template

./: .dockerignore  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yaml  dockerfile.txt  dummy.txt  main.py  pyproject.toml  setup.cfg
cybulde/: entrypoint.py
cybulde/config_schemas/: config_schema.py
cybulde/configs/: config.yaml
cybulde/configs/hydra/job_logging/: custom.yaml
cybulde/utils/: config_utils.py
docker/: Dockerfile
docker/scripts/: startup-script.sh
